# Hanford-Isometric-main

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  LICENSE  NANO_BANANA_PRO_SETUP.md  README.md  TASK_11_FLUX_GENERATION_SETUP.md  TILE_GENERATION_ANALYSIS.md  generate_placeholder_tiles.py  manifestation_preview.md  pyproject.toml  test_imports.py
docs/: app.md  bounds.md  data.md  deployment.md  generation.md  models.md  setup.md  water_shader.md
generations/: README.md
geo_data/: README.md
inference/: README.md  server.py  test_server.py
layers/: README.md
oxen/: README.md
src/: view.json
tasks/: 001_initialize_project.md  002_simplest_generation.md  003_citygml.md  004_tiles.md  005_oxen_api.md  006_infill_dataset.md  007_e2e_generation.md  008_e2e_generartion_pixels.md  009_inpainting.md  010_omni_generation_dataset.md  012_generation_rules.md  013_generation_app.md  014_bounds_app.md  015_automatic_generation.md  016_generation_playbook.md  018_water_fix.md  019_strip_plan.md  020_map_web_app.md  021_water_shader.md  022_debug_map.md  023_generation_app_improvements.md  024_rectangle_generation_plan.md  025_scanlines.md  026_postprocessing.md  026_water_shader.md  027_water_select.md  028_pmtiles.md  029_nano_banana_generation.md  030_cleanup_git_repo.md  031_deploy.md  032_detect_water_tiles.md  033_local_inference.md  034_generation_app_outline.md  035_boundaries.md  036_persistent_prompt.md  037_new_dataset_curation.md  038_nano_banana_generation.md  039_noise_to_synthetic_data.md  040_speed_up_pmtiles.md  041_clip_bounds.md  (+11 more)
tests/: test_make_rectangle_plan.py  test_make_strip_plan.py  (+5 more)
(+328 files in other folders)
